# glfwvk

./: CMakeLists.txt
drawtriangle/: CMakeLists.txt  main.cpp
drawtriangle/shaders/: shader.vert
glfw/: CMakeLists.txt
glm/glm/: common.hpp
vklib/Frameworks/vulkan.framework/Versions/A/: vulkan
vklib/etc/vulkan/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_core_validation.json  VkLayer_khronos_validation.json  VkLayer_object_lifetimes.json  VkLayer_stateless_validation.json  VkLayer_thread_safety.json  VkLayer_unique_objects.json
vklib/lib/: libSPIRV-Tools-shared.dylib  libVkLayer_api_dump.dylib  libVkLayer_unique_objects.dylib
vklib/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc
